Updated by task 'AutomatedMDTask_1698922399906_TM-MT_1698922407362'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/2177f309e9a28d79009e5000abd46950d1ff8555

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -7,7 +7,7 @@ exl-id: c0d91643-2f2a-4877-b421-cfd42259d4a4
 source-git-commit: 201923c09e0a176454b937c2d9503d54f8ea1c7f
 workflow-type: tm+mt
 source-wordcount: '11809'
-ht-degree: 94%
+ht-degree: 99%
 
 ---
 
@@ -19,25 +19,25 @@ Obtenga información sobre las últimas actualizaciones de la versión para los 
 
 | Función | Descripción | [Inicio del despliegue](releases.md) | [Disponibilidad general](releases.md) |
 | ----------- | ---------- | ------- | ---- |
-| **Mejoras del Administrador de actividades de creación de informes** | El Administrador de actividades de creación de informes le permite ver la capacidad de creación de informes de cada grupo de informes de su organización.  Proporciona a los administradores una visibilidad detallada del consumo de creación de informes para diagnosticar y corregir fácilmente los problemas de capacidad durante las horas de mayor actividad de creación de informes. A continuación se indican algunas de las mejoras que ahora están disponibles en el Administrador de actividades de creación de informes: <ul><li>Restringir solicitudes posteriores: además de cancelar las solicitudes actuales, los administradores ahora pueden restringir las solicitudes durante un período de tiempo definido. Los administradores pueden restringir las solicitudes por solicitud, proyecto y usuario.</li><li>Además de las métricas de Utilización y Capacidad, el Administrador de actividades de creación de informes ahora incluye más datos sobre la actividad de creación de informes: columna Complejidad, columna Usuario y columna Conexión.</li><li>Todas las cancelaciones y restricciones realizadas en el administrador de actividades de creación de informes ahora están visibles en el registro de auditoría. Los administradores pueden utilizar el registro de auditoría para ver lo que se ha cancelado actualmente. Las cancelaciones no se pueden revertir en el Administrador de actividades de creación de informes ni en el Registro de auditoría.</li></ul><p>Para obtener más información, consulte [Información general del Administrador de actividades de creación de informes](/help/admin/admin/reporting-activity-manager/reporting-activity-overview.md)</p> | 17 de octubre de 2023 | 23 de octubre de 2023 |
+| **Administrador de actividades de creación de informes** | El Administrador de actividades de creación de informes le permite ver la capacidad de creación de informes de cada grupo de informes de su organización.  Proporciona a los administradores una visibilidad detallada del consumo de creación de informes para diagnosticar y corregir fácilmente los problemas de capacidad durante las horas de mayor actividad de creación de informes. A continuación se indican algunas de las mejoras que ahora están disponibles en el Administrador de actividades de creación de informes: <ul><li>Restringir las solicitudes posteriores: además de cancelar las solicitudes actuales, los administradores ahora pueden restringir las solicitudes durante un período de tiempo definido. Los administradores pueden restringir las solicitudes por solicitud, proyecto o usuario.</li><li>Además de las métricas de Utilización y Capacidad, el Administrador de actividades de creación de informes ahora incluye más datos sobre la actividad de creación de informes: columna Complejidad, columna Usuario y columna Conexión.</li><li>Todas las cancelaciones y restricciones realizadas en el administrador de actividades de creación de informes ahora están visibles en el registro de auditoría. Los administradores pueden utilizar el registro de auditoría para ver lo que se ha cancelado actualmente. Las cancelaciones no se pueden revertir en el Administrador de actividades de creación de informes ni en el Registro de auditoría.</li></ul><p>Para obtener más información, consulte [Información general del Administrador de actividades de creación de informes](/help/admin/admin/reporting-activity-manager/reporting-activity-overview.md)</p> | 17 de octubre de 2023 | 23 de octubre de 2023 |
 | **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 12 de septiembre de 2023 | 25 de octubre de 2023 |
 | **Nuevas columnas disponibles al administrar componentes** | Las siguientes columnas nuevas ya están disponibles al administrar componentes:<ul><li>**Utilizado en**: esta columna está disponible en el Administrador de métricas calculadas y en el Administrador de segmentos.</li><li>**Último uso**: esta columna está disponible en el Administrador de métricas calculadas, el Administrador de segmentos y el Administrador de alertas.</li></ul>Esta información puede ayudarle a determinar si un componente es valioso para los usuarios de su organización, dónde se utiliza y si debe eliminarse o modificarse. Puede utilizar el diccionario de datos junto con esta información para ayudarle a realizar un seguimiento y comprender mejor cómo se utilizan los componentes en su organización. | 20 de septiembre de 2023 | 4 de octubre de 2023 |
-| **Migrar proyectos de Adobe Analytics y cualquier componente incluido a Customer Journey Analytics** | Ahora puede migrar sus proyectos de Adobe Analytics a Customer Journey Analytics. Este proceso simplifica la transición de Adobe Analytics a Customer Journey Analytics. Al migrar proyectos a Customer Journey Analytics, los recursos se asignan de un grupo de informes de Adobe Analytics a una vista de datos de Customer Journey Analytics. Los proyectos se migran a Customer Journey Analytics desde la interfaz de Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/admin-tools/component-migration/prepare-component-migration.html?lang=en) | N/A | 9 de octubre de 2023 |
+| **Migrar proyectos de Adobe Analytics y cualquier componente incluido a Customer Journey Analytics** | Ahora puede migrar sus proyectos de Adobe Analytics a Customer Journey Analytics. Este proceso simplifica la transición de Adobe Analytics a Customer Journey Analytics. Al migrar proyectos a Customer Journey Analytics, los recursos se asignan de un grupo de informes de Adobe Analytics a una vista de datos de Customer Journey Analytics. Los proyectos se migran a Customer Journey Analytics desde la interfaz de Adobe Analytics. [Más información](https://experienceleague.adobe.com/docs/analytics/admin/admin-tools/component-migration/prepare-component-migration.html?lang=es ) | N/A | 9 de octubre de 2023 |
 
 {style="table-layout:auto"}
 
 ### Correcciones en Adobe Analytics
 
-* Se han corregido problemas en los que los informes de A4T no aparecían en la interfaz de usuario de Target/Analytics. (AN-329375, AN-329745, AN-330026)
+* Se han solucionado problemas en los que los informes de A4T no aparecían en la interfaz de usuario de Target/Analytics. (AN-329375, AN-329745, AN-330026)
 
-AN-313983; AN-324189; AN-325095; AN-325677; AN-325886; AN-326068; AN-326360; AN-326458; AN-327290 AN-327315 AN-AN-327505 AN-AN; AN-AN-AN; AN-AN; AN-AN; AN-AN;-AN; Y-AN-AN; Y-AN-327589; AN-AN; Y-AN-AN; Y-AN-AN; Y-AN-AN-AN; Y-AN-AN-AN; Y-AN-AN; Y-327353; AN-; AN-; AN-327609; AN-327922; AN-328110; AN-328222; AN-AN; AN-AN-AN; AN-AN-AN; AN-AN-AN; AN-AN-AN; AN-AN-AN; AN-AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-AN; AN-328261;-AN;-AN;-328496;-AN;-AN-328577; AN-; AN-328629; AN-328736; AN-328888; AN-328899; AN-328902; AN-328921; AN-328958; AN-329208; AN-329277; AN-329332; AN-329334; AN-329335; AN-329336; AN-329357; AN-329385; AN-329387; AN-329397; AN-329463; AN-329501; AN-329504 329505 329515 329524 329526 329534 329539 329541 329543 329545 329564 329570 329623 329624 329636 329646 329647 329668 329701 329737 329741 329751 329812 329813 329821 329824 329833 329848 329852 329861 329863 329874 329882 329911 329917 329942 329954 329968 329971 329982 330044 330052 330131 330132 330230 330352 330367 330541 330599
+AN-313983; AN-324189; AN-325095; AN-325677; AN-325886; AN-326068; AN-326360; AN-326458; AN-327290; AN-327315; AN-327353; AN-327505; AN-327589; AN-327609; AN-327922; AN-328110; AN-328222; AN-328261; AN-328496; AN-328577; AN-328629; AN-328736; AN-328888; AN-328899; AN-328902; AN-328921; AN-328958; AN-329208; AN-329277; AN-329332; AN-329334; AN-329335; AN-329336; AN-329357; AN-329385; AN-329387; AN-329397; AN-329463; AN-329501; AN-329504; AN-329505; AN-329515; AN-329524; AN-329526; AN-329534; AN-329539; AN-329541; AN-329543; AN-329545; AN-329564; AN-329570; AN-329623; AN-329624; AN-329636; AN-329646; AN-329647; AN-329668; AN-329701; AN-329737; AN-329741; AN-329751; AN-329812; AN-329813; AN-329821; AN-329824; AN-329833; AN-329848; AN-329852; AN-329861; AN-329863; AN-329874; AN-329882; AN-329911; AN-329917; AN-329942; AN-329954; AN-329968; AN-329971; AN-329982; AN-330044; AN-330052; AN-330131; AN-330132; AN-330230; AN-330352; AN-330367; AN-330541; AN-330599
 
 ### Avisos importantes para los administradores de Adobe Analytics
 
 | Aviso | Fecha de incorporación o actualizada | Descripción |
 | ----------- | ---------- | ---------- |
-| **Confusión de IP completa para visitas de Adobe Experience Edge** | 27 de septiembre de 2023 | La confusión de IP para las visitas procedentes de Experience Edge se actualizará más adelante en octubre de 2023. En abril, Experience Edge agregó la capacidad de proteger las direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Cuando se implemente este cambio, Analytics recibirá la IP totalmente oculta. |
-| **Adobe Analytics Livestream: API de Analytics 2.0** | 27 de septiembre de 2023 | Los clientes ahora pueden acceder a [Guía de extremo de Adobe Analytics Livestream](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/livestream/) en las API de Adobe Analytics 2.0 en lugar de en su ubicación anterior, con las API 1.4. Tenga en cuenta que los clientes que utilizan credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de OAuth de Adobe I/O antes del 1 de enero de 2025. (Consulte los detalles en los avisos de fin de vida más abajo). |
+| **Confusión de IP completa para visitas de Adobe Experience Edge** | 27 de septiembre de 2023 | La confusión de IP para visitas procedentes de Experience Edge se actualizará más adelante en octubre de 2023. En abril, Experience Edge añadió la capacidad de proteger direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Cuando se implemente este cambio, Analytics recibirá la IP totalmente oculta. |
+| **Adobe Analytics Livestream: API de Analytics 2.0** | 27 de septiembre de 2023 | Los clientes ahora pueden acceder a [Guía de punto final de Adobe Analytics Livestream](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/livestream/) en las API de Adobe Analytics 2.0 en lugar de en su ubicación anterior, con las API 1.4. Observe que los clientes que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el 1 de enero de 2025. (Consulte los detalles en los avisos de fin de la vida útil más abajo). |
 
 {style="table-layout:auto"}
 
@@ -63,7 +63,7 @@ Para obtener las últimas actualizaciones de las versiones de AppMeasurement (2.
 | **Clasificaciones en la API 2.0** | Proporciona métodos de la API de Adobe Analytics 2.0 para guardar, eliminar, recuperar, importar y exportar datos del conjunto de clasificación. [Más información](https://developer.adobe.com/analytics-apis/docs/2.0/guides/endpoints/classifications/) | N/A | 13 de septiembre de 2023 |
 | **Compatibilidad con nuevo campo de `correlationID` para clasificaciones de A4T** | El campo `_experience.decisioning.propositions.scopeDetails.correlationID` ahora está disponible en el esquema del conector de origen de Adobe Analytics. Se va a agregar este ID para facilitar la unión de los datos de clasificación para las actividades y los eventos de experiencia de Adobe Target. | N/A | 13 de septiembre de 2023 |
 | **Mejoras del Data Warehouse** | Al crear una solicitud de Data Warehouse, ahora puede configurar una cuenta de la nube para usarla como destino del informe. Los siguientes tipos de cuenta de nube están disponibles para enviar datos:<ul><li>Amazon S3</li><li>Google Cloud Platform</li><li>Azure SAS</li><li>Azure RBAC</li><li>Correo electrónico (esta opción estaba disponible anteriormente)</li></ul>FTP, SFTP, Azure Blob y S3 siguen estando disponibles como destinos de informe, pero ya no se recomiendan.<p>También se ha mejorado la experiencia del usuario al crear y administrar solicitudes de Data Warehouse. Para obtener más información, consulte [Creación de una solicitud de Data Warehouse](/help/export/data-warehouse/create-request/t-dw-create-request.md) y [Administrar solicitudes de Data Warehouse](https://experienceleague.adobe.com/docs/analytics/export/data-warehouse/data-warehouse-requests-manage.html?lang=es). | 13 de septiembre de 2023 | 4 de octubre de 2023 |
-| **Nuevas columnas disponibles al administrar componentes** | Las siguientes columnas nuevas ya están disponibles al administrar componentes:<ul><li>Utilizado en<p>Esta columna está disponible en la variable [Administrador de métricas calculadas](/help/components/c-calcmetrics/c-workflow/cm-workflow/cm-manager.md) y el [Administrador de segmentos](/help/components/segmentation/segmentation-workflow/seg-manage.md).</p></li><li>Último uso<p>Esta columna está disponible en la variable [Administrador de métricas calculadas](/help/components/c-calcmetrics/c-workflow/cm-workflow/cm-manager.md), el [Administrador de segmentos](/help/components/segmentation/segmentation-workflow/seg-manage.md), y el [Administrador de alertas](/help/components/c-alerts/alert-manager.md).</p></li></ul><p>Esta información puede ayudarle a determinar si un componente es valioso para los usuarios de su organización, dónde se utiliza y si debe eliminarse o modificarse. Puede utilizar el diccionario de datos junto con esta información para ayudarle a realizar un seguimiento y comprender mejor cómo se utilizan los componentes en su organización.</p> | 20 de septiembre de 2023 | 4 de octubre de 2023 |
+| **Nuevas columnas disponibles al administrar componentes** | Las siguientes columnas nuevas ya están disponibles al administrar componentes:<ul><li>Utilizado en<p>Esta columna está disponible en el [Administrador de métricas calculadas](/help/components/c-calcmetrics/c-workflow/cm-workflow/cm-manager.md) y el [Administrador de segmentos](/help/components/segmentation/segmentation-workflow/seg-manage.md).</p></li><li>Último uso<p>Esta columna está disponible en el [Administrador de métricas calculadas](/help/components/c-calcmetrics/c-workflow/cm-workflow/cm-manager.md), el [Administrador de segmentos](/help/components/segmentation/segmentation-workflow/seg-manage.md) y el [Administrador de alertas](/help/components/c-alerts/alert-manager.md).</p></li></ul><p>Esta información puede ayudarle a determinar si un componente es valioso para los usuarios de su organización, dónde se utiliza y si debe eliminarse o modificarse. Puede utilizar el diccionario de datos junto con esta información para ayudarle a realizar un seguimiento y comprender mejor cómo se utilizan los componentes en su organización.</p> | 20 de septiembre de 2023 | 4 de octubre de 2023 |
 
 {style="table-layout:auto"}
 
@@ -109,8 +109,8 @@ AN-315605; AN-316306; AN-317494; AN-317844; AN-320424; AN-320597; AN-320680; AN-
 
 | Aviso | Fecha de incorporación o actualizada | Descripción |
 | ----------- | ---------- | ---------- |
-| **Compatibilidad con la recepción de direcciones IP ocultas** | 27 de septiembre de 2023 | Se actualizará la confusión de IP para las visitas procedentes de Experience Edge. En abril de 2023, Experience Edge agregó la capacidad de proteger las direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Con este cambio, Analytics recibirá ahora la IP totalmente oculta. |
-| **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 10 de julio de 2023 | La última versión del motor de procesamiento de visitas de Analytics, publicada el **13 de julio de 2023**, comenzó a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Anteriormente, los ID de compra y los ID de evento nunca caducaban en Adobe Analytics. Una vez que se vio/utilizó un ID de compra o ID de evento, cualquier visita futura, independientemente de cuándo, tenía esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
+| **Compatibilidad con la recepción de direcciones IP ocultas** | 27 de septiembre de 2023 | Se actualizará la ofuscación de IP para las visitas procedentes de Experience Edge. En abril de 2023, Experience Edge añadió la capacidad de proteger direcciones IP. En ese momento, Adobe Analytics solo admitía la ofuscación parcial de direcciones IP, debido a la forma en que Analytics procesa las visitas de Experience Edge. Cuando los clientes eligieron la ofuscación completa para Experience Edge, Analytics solo recibía direcciones IP parcialmente ofuscadas. Con este cambio, Analytics recibirá ahora la IP totalmente oculta. |
+| **Caducidad de 37 meses de los ID de compra y los ID de evento (serialización de eventos)** | 10 de julio de 2023 | Una próxima versión del motor de procesamiento de visitas de Analytics, prevista para su lanzamiento el **13 de julio de 2023**, empezará a aplicar una caducidad de 37 meses para los ID de compra y los ID de evento (serialización de eventos). Actualmente, los ID de compra y los ID de evento nunca caducan en Adobe Analytics. Una vez que se veía/utilizaba un ID de compra o ID de evento, cualquier visita futura, sin importar cuándo, tenía esa compra o evento marcado como duplicado. Con la nueva versión del motor de procesamiento:<ul><li>Los ID de compra y los ID de evento siempre caducan pasados 37 meses.</li><li>Si han pasado 37 meses desde que se vio el ID de compra o el ID de evento, ya no se considera una compra o evento duplicado.</li><li> Si está &quot;reutilizando&quot; los ID de compra o ID de evento de hace más de 37 meses, ya no se consideran duplicados.</li></ul> |
 | **Migración a las credenciales de servidor a servidor de Adobe I/O OAuth** | 11 de mayo de 2023 | Los clientes de la API de Adobe Analytics y Livestream que utilizan las credenciales de JWT de Adobe I/O deben migrar a las credenciales de servidor a servidor de Adobe I/O OAuth de forma predeterminada el **1 de enero de 2025**. Para obtener más información y cronologías, consulte el aviso de fin de vida útil en la tabla siguiente. |
 
 {style="table-layout:auto"}
@@ -407,7 +407,7 @@ AN-282634; AN-289684; AN-299597; AN-299630; AN-300128; AN-301633; AN-301683; AN-
 | Aviso | Fecha de incorporación o actualizada | Descripción |
 | ----------- | ---------- | ---------- |
 | **Actualización de las búsquedas de dispositivos debido a las sugerencias del cliente de Google** | 25 de enero de 2023 | El uso de sugerencias del cliente en la búsqueda de dispositivos se iniciará el **16 de febrero de 2023**. <p> <p>Desde octubre de 2022, es posible recopilar sugerencias del cliente con las bibliotecas de SDK web o JavaScript de AppMeasurement. Sin embargo, las sugerencias del cliente no se incorporarán a la búsqueda de dispositivos hasta febrero de 2023. En esa fecha, Adobe empezará a utilizar sugerencias del cliente, además del agente de usuario, al obtener determinada información de los dispositivos para las visitas procedentes de exploradores Chromium, como Google Chrome y Microsoft Edge. Esto es en respuesta al plan de Google de reducir gradualmente la información presentada desde la cadena del agente de usuario en lugar de los datos pasados a través de sugerencias del cliente. <p> <p>Como parte de este cambio, Adobe utilizará Device Atlas para todas las búsquedas de dispositivos relacionadas con el agente de usuario. [Más información](/help/technotes/client-hints.md) |
-| **Convenciones de nomenclatura actualizadas para [Navegadores](../components/dimensions/browser.md) dimensión** | 17 de enero de 2023 | A partir de la versión 110 para los navegadores Chrome, Edge y Firefox, el nombre de la empresa ya no aparece antes del explorador. Esto podría afectar a los informes si tiene definiciones de segmentos basadas en el nombre del explorador. Por ejemplo, un segmento que incluye una definición de que &quot;explorador contiene &quot;Google&quot; ya no identifica los exploradores Chrome que empiezan por la versión 110. Además, a partir de Chrome 110, las versiones móviles y no móviles de Chrome están etiquetadas igual. Anteriormente, las versiones para móviles y no móviles se etiquetaban de forma independiente. Puede utilizar la segmentación y los desgloses móviles para comparar el tráfico móvil y el no móvil. |
+| **Convenciones de nomenclatura actualizadas para la dimensión [Exploradores](../components/dimensions/browser.md)** | 17 de enero de 2023 | A partir de la versión 110 de los exploradores Chrome, Edge y Firefox, el nombre de la empresa ya no aparece antes del explorador. Esto podría afectar a los informes si tiene definiciones de segmentos basadas en el nombre del explorador. Por ejemplo, un segmento que incluye una definición de que &quot;el explorador contiene &quot;Google&quot; ya no identifica los exploradores Chrome que empiezan por la versión 110. Además, a partir de Chrome 110, las versiones para móviles y no móviles de Chrome están etiquetadas igual. Anteriormente, las versiones para móviles y no móviles se etiquetaban de forma independiente. Puede utilizar la segmentación y los desgloses móviles para comparar el tráfico móvil y no móvil. |
 | **Pausa de informes programados en Reports &amp; Analytics** | 6 de enero de 2023 | Este es un recordatorio de que Adobe dejará de usar estas funciones el **31 de enero de 2023**. Tenga en cuenta que los plazos de caducidad para los informes y los extractos de datos seguirán estando limitados a nueve meses; la entrega de informes y extracciones de datos se pausará al final de este periodo a menos que se reactive la programación.<p>Para reiterar, estas funciones quedarán obsoletas el 31 de enero de 2023. Antes de esta fecha, debe migrar los informes programados a uno de los demás mecanismos disponibles en Adobe Analytics. Para obtener más información o ayuda, póngase en contacto con el Servicio de atención al cliente de Adobe. [Más información](/help/analyze/reports-analytics/scheduled-reports-eol.md) |
 | **Pausa de tareas programadas en el Report Builder** | 6 de enero de 2023 | El **31 de enero de 2023**, Adobe implementó cambios en las tareas programadas en Report Builder como parte de nuestros esfuerzos de optimización del rendimiento y la entrega. Estos cambios incluían la eliminación de la capacidad de que los envíos programados “terminen después de x incidencias”.<p>Puede continuar programando tareas de Report Builder por hora y hacer que finalicen después de un máximo de 99 incidencias. Tenga en cuenta que la reversión solo se aplica a tareas por hora; el evento “terminar después de x incidencias” permanecerá no disponible para todos los demás intervalos de entrega (diario, semanal, mensual y anual). Tenga en cuenta que esta opción quedará obsoleta el 31 de enero de 2023. Para obtener más información o ayuda, póngase en contacto con el Servicio de atención al cliente de Adobe. [Más información](/help/analyze/report-builder/r-arb-scheduled-reports.md) |
 | **Asignación de IP a geolocalización mejorada** | 4 de enero de 2023 | Nuestro proveedor de búsquedas de IP, Digital Element, está actualizando a un nuevo conjunto de datos mejorado (NetAcuity Pulse) para la asignación de IP a geolocalización. Originalmente planificado para octubre de 2022, Adobe Analytics adoptó este nuevo conjunto de datos el **11 de enero de 2023**. La nueva base de datos es más precisa que las versiones anteriores. Algunas asignaciones de IP a regiones cambian o mejoran al adoptarse la nueva base de datos.<p>Todas las herramientas de Adobe Analytics (Analysis Workspace, Reports &amp; Analytics, API de informes, Data Warehouse, LiveStream, fuentes de datos de Analytics, etc.) aprovechan automáticamente las nuevas asignaciones mejoradas. No hay cambios en el formato de los datos en las fuentes de datos. Los datos de Customer Journey Analytics proporcionados a través del conector de origen de Analytics también aprovechan automáticamente las nuevas asignaciones. |
